--- a/frontend/landing-page/style.css
+++ b/frontend/landing-page/style.css
@@ -123,7 +123,76 @@ body {
     display: flex;
     flex-direction: column;
 }
-  
+
+.main-body {
+    /*  */
+}
+
+.building-container {
+    position: relative;
+    width: 220px;
+    height: 220px;
+    overflow: hidden;
+
+    border-radius: 10px;
+
+    font-family: arial;
+}
+
+.building-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+
+}
+
+.rooms-avaliable {
+    top: 10px;
+    right: 10px;
+
+    background-color: white;
+
+    border-radius: 10px;
+
+    font-size: 10px;
+    font-weight: bold;
+    padding: 8px;
+
+    display: flex;
+    align-items: center;
+}
+
+.avaliable-icon {
+    height: 13px;
+    width: 13px;
+    background-color: lightgreen;
+    border-radius: 50%;
+    display: inline-block;
+
+    margin: 0px 5px 0px 0px;
+}
+
+.building-name {
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+
+    background-color: darkorange;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: Arial;
+
+    padding: 10px 10px;
+}
 
 .footer {
     background-color: #1F2937;
