--- a/frontend/landing-page/style.css
+++ b/frontend/landing-page/style.css
@@ -125,21 +125,19 @@ body {
 }
 
 .main-body {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 12px;
 
-    padding: 0px 10px;
+    padding: 0px 10px 10px 10px;
 }
 
 .building-container {
     position: relative;
-    min-width: 300px;
     height: 300px;
     overflow: hidden;
 
-    margin: 6px;
     border-radius: 10px;
-    flex: 1;
 
     font-family: arial;
 }
