--- a/frontend/landing-page/style.css
+++ b/frontend/landing-page/style.css
@@ -26,7 +26,7 @@ body {
     border-style: solid;
 }
 
-.freerooms-logo-container {
+#freerooms-logo-container {
     display: flex;
     justify-content: center;
     align-items: center;
